--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.3",
     "downloadjs": "^1.4.7",
     "formik": "^2.4.6",
+    "html2canvas": "^1.4.1",
     "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
     "react-cropper": "^2.3.3",
